[gd_scene load_steps=10 format=2]

[ext_resource path="res://Text/MainFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Background/colored_grass.png" type="Texture" id=2]
[ext_resource path="res://ProgressBar.vs" type="Script" id=3]
[ext_resource path="res://World.gd" type="Script" id=4]
[ext_resource path="res://Text/m5x7.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Music/happy.ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.00392157, 0.545098, 0.0901961, 1 )

[sub_resource type="StyleBoxFlat" id=3]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.576471, 0.576471, 0.576471, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[node name="World" type="Node" groups=[
"World",
]]
script = ExtResource( 4 )

[node name="RichText" type="RichTextLabel" parent="."]
margin_top = 128.0
margin_right = 1024.0
margin_bottom = 592.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.9375, 0.9375, 0.9375, 1 )
position = Vector2( 512, 512 )
z_index = -55
texture = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control"]
margin_left = 864.0
margin_top = 32.0
margin_right = 1000.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 1 )
text = "Swing"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StrengthBar" type="ProgressBar" parent="Control" groups=[
"StrengthBar",
]]
margin_left = 864.0
margin_top = 88.0
margin_right = 1000.0
margin_bottom = 120.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="Control"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 448.0
margin_top = 40.0
margin_right = 638.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 1 )
text = "Time: 0 Seconds"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Swings" type="Label" parent="Control"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 73.0
margin_top = 40.0
margin_right = 263.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 1 )
text = "Swings: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coins" type="Label" parent="Control"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 73.0
margin_top = 66.0
margin_right = 263.0
margin_bottom = 94.0
custom_fonts/font = ExtResource( 1 )
text = "Coins: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -35.597
autoplay = true
[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
